TWC3167-5615 : white space around the content & alignment of the Upload Meetcomp button css fixes. (#2018)

--- a/Intel.MyDeals/Client/src/app/admin/bulkPricingUpdates/admin.bulkPricingUpdates.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/bulkPricingUpdates/admin.bulkPricingUpdates.component.css
@@ -26,7 +26,7 @@
   margin-left: -2px;
 }
 #modalBodyDiv .row {
-  margin-left: 10px;
+  margin-left: -5px;
   width: 700px;
 }
 .modal-dialog {
